Fix certificate version lifecycle actions
